--- a/movie-service.yml
+++ b/movie-service.yml
@@ -1,14 +1,13 @@
 server:
   port: ${PORT:${SERVER_PORT:0}}
-
 spring:
   application:
     name: movie-service
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3380/music-dev
-    username: usr-music
-    password: pwd-music
+    url: jdbc:mysql://localhost:3370/movie-dev
+    username: usr-movie
+    password: pwd-movie
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
