--- a/movie-service.yml
+++ b/movie-service.yml
@@ -1,5 +1,8 @@
 server:
   port: ${PORT:${SERVER_PORT:0}}
+
+idRandom: {$random.value}
+
 spring:
   application:
     name: movie-service
@@ -23,7 +26,7 @@ eureka:
     service-url:
       default-zone: http://localhost:8761/eureka
   instance:
-    instance-id: ${spring.application.name}-${server.port}
+    instance-id: ${spring.application.name}:${random.value}
     prefer-ip-address: true
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
