--- a/serie-service.yml
+++ b/serie-service.yml
@@ -5,6 +5,22 @@ spring:
   application:
     name: serie-service
 
+  rabbitmq:
+    username: guest
+    password: guest
+    localhost: localhost
+    port: 5672
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
+
+queue:
+  persona:
+    name: SerieQueue
+
+message: Serie UP
+    
+
 eureka:
   client:
     register-with-eureka: true
