--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -5,6 +5,21 @@ spring:
   application:
     name: catalog-service
 
+rabbitmq:
+  username: guest
+  password: guest
+  localhost: localhost
+  port: 5672
+zipkin:
+  base-url: http://localhost:9411/
+  enabled: true
+
+queue:
+  serie:
+    name: SerieQueue
+
+message: Serie UP
+
 eureka:
   client:
     register-with-eureka: true
