--- a/gateway.yml
+++ b/gateway.yml
@@ -14,6 +14,10 @@ spring:
           uri: lb://catalog-service/
           predicates:
             - Path=/catalog/**
+        - id: serieRoute
+          uri: lb://serie-service/
+          predicates:
+            - Path=/serie/**
 
 
 
