--- a/movie-service.yml
+++ b/movie-service.yml
@@ -18,6 +18,8 @@ spring:
   queue:
     movie:
       name: MovieQueue
+
+  message: Movie UP
     
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
