--- a/serie-service.yml
+++ b/serie-service.yml
@@ -21,6 +21,10 @@ spring:
       database: test
       port: 27017  
 
+queue:
+  serie:
+    name: SerieQueue
+
 eureka:
   client:
     register-with-eureka: true
