--- a/movie-service.yml
+++ b/movie-service.yml
@@ -25,6 +25,11 @@ spring:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+
+queue:
+  movie:
+    name: MovieQueue
+    
 eureka:
   client:
     register-with-eureka: true
