--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -5,6 +5,14 @@ spring:
   application:
     name: catalog-service
 
+  mongodb:
+    embedded:
+      version: 4.0.2
+    data:
+      mongodb:
+        database: catalog
+        port: 27018
+
   rabbitmq:
     username: guest
     password: guest
